--- a/INAH/INAH.csproj
+++ b/INAH/INAH.csproj
@@ -43,11 +43,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Informacion usuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Informacion usuario.Designer.cs">
+      <DependentUpon>Informacion usuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Inicio Sesion.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Inicio Sesion.Designer.cs">
       <DependentUpon>Inicio Sesion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Juntas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Juntas.Designer.cs">
+      <DependentUpon>Juntas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Nuevo Usuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Nuevo Usuario.Designer.cs">
+      <DependentUpon>Nuevo Usuario.cs</DependentUpon>
     </Compile>
     <Compile Include="RegVentanilla.cs">
       <SubType>Form</SubType>
@@ -57,14 +75,29 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Usuarios.Designer.cs">
+      <DependentUpon>Usuarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Ventanilla.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Ventanilla.Designer.cs">
       <DependentUpon>Ventanilla.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Informacion usuario.resx">
+      <DependentUpon>Informacion usuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Inicio Sesion.resx">
       <DependentUpon>Inicio Sesion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Juntas.resx">
+      <DependentUpon>Juntas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Nuevo Usuario.resx">
+      <DependentUpon>Nuevo Usuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RegVentanilla.resx">
       <DependentUpon>RegVentanilla.cs</DependentUpon>
@@ -78,6 +111,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Usuarios.resx">
+      <DependentUpon>Usuarios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Ventanilla.resx">
       <DependentUpon>Ventanilla.cs</DependentUpon>
     </EmbeddedResource>
